--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.17.1",
     "mongoose": "^4.9.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
