--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipe-blender",
+  "name": "recipe-box",
   "version": "0.0.1",
   "description": "An app for searching and saving recipes",
   "main": "index.js",
