--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.14.0",
+    "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.17.1",
     "mongoose": "^4.9.3",
